Locked in a min width to the variable width total and speed cells to prevent the cells from frequently jumping.

--- a/bwmon/www/bwmon.css
+++ b/bwmon/www/bwmon.css
@@ -39,3 +39,7 @@
 .active-traffic td {
 	background-color: #FCF8C0;
 }
+
+.min-width {
+	min-width: 6em;
+}
